# analisis

./: .gitignore  .pre-commit-config.yaml  AnaliticaDatosPremier.ipynb  ConsolidadoPremier.html  ConsolidadoPremier.ipynb  Premier-stiware.ipynb  README.md  pyproject.toml  requirements.txt
data/: final_matches.csv
