[project]
name = "analisis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "matplotlib",
  "seaborn",
  "plotly",
  "nbformat",
  "pyzmq",
  "ipykernel",
  "jupyter-client",
  "notebook",
  "kaleido>=1.2.0",
]

[project.optional-dependencies]
dev = ["pre-commit"]
